# meeting-butler

./: .flake8  .gitignore  Dockerfile  LICENSE  README.md  meeting-butler.conf.sample  pyproject.toml
meeting_butler/: __main__.py  cache.py  eventbrite.py  formbuilder.py  meeting_butler.py  meetingtool.py  pretino.py  settings.py  user.py
tests/: test_cache.py  test_eventbrite.py  test_pretino.py
