[tool.isort]
profile = "black"

[tool.black]
line-length = 100

[tool.poetry]
name = "meeting-butler"
version = "0.2.0"
description = "Takes care of background tasks pertained to meeting and registrations"
authors = ["Marco Marzetti <marco@itnog.it>"]
license = "MIT"
readme = "README.md"
packages = [{include = "meeting_butler"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
pydantic-settings = "^2.2.1"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"
flake8 = "^6.0.0"
pylint = "^2.17.1"
responses = "^0.23.1"
black = "^23.3.0"
isort = "^5.12.0"

[tool.poetry.scripts]
meeting-butler = "meeting_butler.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
