[tool.isort]
profile = "black"

[tool.black]
line-length = 100

[tool.poetry]
name = "meeting-butler"
version = "0.2.0"
description = "Takes care of background tasks pertained to meeting and registrations"
authors = ["Marco Marzetti <marco@itnog.it>"]
license = "MIT"
readme = "README.md"
packages = [{include = "meeting_butler"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
pydantic-settings = "^2.9.1"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.1.1"
flake8 = "^7.2.0"
pylint = "^3.3.6"
responses = "^0.25.7"
black = "^25.1.0"
isort = "^6.0.1"

[tool.poetry.scripts]
meeting-butler = "meeting_butler.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
